package CSE222_hw06.interface_oguz;

public interface ICompany {
 
    
    /**
     * Read given file and create new sorted one
     * @param filename The filename going to read
     */
    void readFile(String filename);


}
